--- a/index.html
+++ b/index.html
@@ -3,36 +3,58 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>My Portfolio</title>
+  <title>Shashank Chawathe – Portfolio</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
-    <h1>Your Name</h1>
-    <p>Law Student | Legal Intern | Aspiring Advocate</p>
+    <h1>Shashank Chawathe</h1>
+    <p>IV Year Law Student, IFIM Law School | Legal Intern | Aspiring Advocate</p>
   </header>
 
   <section class="about">
     <h2>About Me</h2>
     <p>
-      I'm a passionate law student currently interning at M. Neerav & Associates,
-      with interests in indirect taxation and trial advocacy. I'm driven by
-      curiosity, clarity, and a deep respect for the law.
+      I am a fourth-year BBA LL.B. student at IFIM Law School, Bengaluru (Class of 2026),
+      with experience across litigation, research, and legal drafting. My interests lie in trial
+      advocacy, intellectual property law, and regulatory compliance.
     </p>
   </section>
 
-  <section class="projects">
-    <h2>Projects</h2>
+  <section class="experience">
+    <h2>Internships & Work Experience</h2>
     <ul>
-      <li>Organized the 1st Intra Trial Advocacy Competition (IFIM Law School)</li>
-      <li>Drafted negotiation strategies for a fictional international dispute</li>
-      <li>Researched GST compliance for manufacturing firms</li>
+      <li><strong>Scales Law Firm</strong> – Drafted legal documents, researched cyber laws & IP issues, and prepared litigation materials.</li>
+      <li><strong>Chambers of Adv. Ajinkya Udane, Bombay HC</strong> – Assisted in litigation prep, legal drafting, and court observation.</li>
+      <li><strong>Edge Law Partners</strong> – Researched provisions under IPC, CrPC, and Evidence Act.</li>
+      <li><strong>The Amikus Qriae</strong> – Wrote case briefs and conducted legal research on Benami laws and Hindu personal laws.</li>
+    </ul>
+  </section>
+
+  <section class="publications">
+    <h2>Publications</h2>
+    <ul>
+      <li>“Gender Inclusivity in Sports: Indian Context” – Jus Corpus Law Journal</li>
+      <li>“Malicious Prosecution and False Imprisonment” – IJLRA</li>
+      <li>“The Curious Case of Male Prostitution” – Jus Corpus Law Journal</li>
+      <li>“Juvenile Delinquency: Indian Context” – Legal Lore</li>
+    </ul>
+  </section>
+
+  <section class="awards">
+    <h2>Awards & Leadership</h2>
+    <ul>
+      <li>Best Researcher – IFIM Annual Ranking Moot Court Competition</li>
+      <li>Convenor – Centre for Legal Advocacy</li>
+      <li>Runner-Up – IFIM Intra CSI Competition</li>
+      <li>50% Super Scholar Scholarship – Padode Foundation</li>
     </ul>
   </section>
 
   <section class="contact">
     <h2>Contact</h2>
-    <p>Email: <a href="mailto:your.email@example.com">your.email@example.com</a></p>
+    <p>Email: <a href="mailto:chawatheshashank@gmail.com">chawatheshashank@gmail.com</a></p>
+    <p>Phone: +91 9763080680</p>
     <p>LinkedIn: <a href="https://linkedin.com/in/yourprofile" target="_blank">linkedin.com/in/yourprofile</a></p>
   </section>
 </body>
