--- a/index.html
+++ b/index.html
@@ -9,25 +9,27 @@
 <body>
   <header>
     <h1>Shashank Chawathe</h1>
-    <p>IV Year Law Student, IFIM Law School | Legal Intern | Aspiring Advocate</p>
+    <p>IV Year Law Student, IFIM Law School | Aspiring Advocate | Criminal & Tax Law Enthusiast</p>
   </header>
 
   <section class="about">
     <h2>About Me</h2>
     <p>
       I am a fourth-year BBA LL.B. student at IFIM Law School, Bengaluru (Class of 2026),
-      with experience across litigation, research, and legal drafting. My interests lie in trial
-      advocacy, intellectual property law, and regulatory compliance.
+      with a strong academic background and diverse legal internship experience.
+      My work spans litigation, legal drafting, policy research, and indirect taxation,
+      with a passion for Criminal Law, Taxation Law including GST and Customs and Family matters.
     </p>
   </section>
 
   <section class="experience">
     <h2>Internships & Work Experience</h2>
     <ul>
-      <li><strong>Scales Law Firm</strong> – Drafted legal documents, researched cyber laws & IP issues, and prepared litigation materials.</li>
-      <li><strong>Chambers of Adv. Ajinkya Udane, Bombay HC</strong> – Assisted in litigation prep, legal drafting, and court observation.</li>
-      <li><strong>Edge Law Partners</strong> – Researched provisions under IPC, CrPC, and Evidence Act.</li>
-      <li><strong>The Amikus Qriae</strong> – Wrote case briefs and conducted legal research on Benami laws and Hindu personal laws.</li>
+      <li><strong>M. Neerav & Associates</strong> – Completed internship focused on indirect taxation, GST advisory, and compliance under Customs law.</li>
+      <li><strong>Scales Law Firm</strong> – Drafted litigation documents including plaints, cease & desist notices, and researched cyber/IP laws.</li>
+      <li><strong>Chambers of Adv. Ajinkya Udane, Bombay HC</strong> – Assisted with case strategy, drafting, client intake, and court proceedings.</li>
+      <li><strong>Edge Law Partners</strong> – Conducted legal research on IPC, CrPC, and Evidence Act provisions.</li>
+      <li><strong>The Amikus Qriae</strong> – Wrote briefs and performed in-depth research on Benami laws, Hindu laws, and media censorship cases.</li>
     </ul>
   </section>
 
