--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <header>
-    <h1>Shashank Chawathe</h1>
-    <p>IV Year Law Student, IFIM Law School | Aspiring Advocate | Criminal & Tax Law Enthusiast</p>
-  </header>
+<header>
+  <img src="WhatsApp Image 2024-10-22 at 6.51.15 PM.jpeg" alt="Shashank Chawathe" class="profile-pic" />
+  <h1>Shashank Chawathe</h1>
+  <p>IV Year Law Student, IFIM Law School | Aspiring Advocate | Trial & Tax Law Enthusiast</p>
+</header>
 
   <section class="about">
     <h2>About Me</h2>
