--- a/index.html
+++ b/index.html
@@ -54,11 +54,14 @@
     </ul>
   </section>
 
-  <section class="contact">
-    <h2>Contact</h2>
-    <p>Email: <a href="mailto:chawatheshashank@gmail.com">chawatheshashank@gmail.com</a></p>
-    <p>Phone: +91 9763080680</p>
-    <p>LinkedIn: <a href="https://linkedin.com/in/yourprofile" target="_blank">linkedin.com/in/yourprofile</a></p>
-  </section>
+ <section class="contact">
+  <h2>Contact</h2>
+  <p>Email: <a href="mailto:chawatheshashank@gmail.com">chawatheshashank@gmail.com</a></p>
+  <p>Phone: +91 9763080680</p>
+  <p>LinkedIn: <a href="https://www.linkedin.com/in/shashank-chawathe-31aab721b" target="_blank">
+    linkedin.com/in/shashank-chawathe</a></p>
+  <a href="Shashank-Chawathe-CV.pdf" class="cv-button" download>Download CV</a>
+</section>
+
 </body>
 </html>
