--- a/index.html
+++ b/index.html
@@ -5,63 +5,71 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Shashank Chawathe – Portfolio</title>
   <link rel="stylesheet" href="style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
 </head>
 <body>
-<header>
-  <img src="WhatsApp Image 2024-10-22 at 6.51.15 PM.jpeg" alt="Shashank Chawathe" class="profile-pic" />
-  <h1>Shashank Chawathe</h1>
-  <p>IV Year Law Student, IFIM Law School | Aspiring Advocate | Criminal, Tax & Family Law Enthusiast</p>
-</header>
+  <div class="container">
+    <header>
+      <img src="profile.jpg" alt="Shashank Chawathe" class="profile-pic" />
+      <h1>Shashank Chawathe</h1>
+      <p>IV Year BBA LL.B. Student, IFIM Law School | Aspiring Advocate | Criminal, Tax & Family Law Enthusiast</p>
+    </header>
 
-  <section class="about">
-    <h2>About Me</h2>
-    <p>
-      I am a fourth-year BBA LL.B. student at IFIM Law School, Bengaluru (Class of 2026),
-      with a strong academic background and diverse legal internship experience.
-      My work spans litigation, legal drafting, policy research, and indirect taxation,
-      with a passion for Criminal Law, Taxation Law including GST and Customs and Family matters.
-    </p>
-  </section>
+    <section>
+      <h2>About Me</h2>
+      <p>
+       I am a dedicated Law student with a growing specialization in Criminal Law, Taxation, and Family Law. 
+  My practical experience spans GST Compliance, Civil & Criminal litigation, and Legal Drafting, equipping me with a balanced 
+  skill set that blends analytical reasoning, statutory interpretation, and effective legal communication. 
+  I am committed to delivering well-researched, client-focused legal solutions and contributing meaningfully 
+  to the legal profession.
+      </p>
+    </section>
 
-  <section class="experience">
-    <h2>Internships & Work Experience</h2>
-    <ul>
-      <li><strong>M. Neerav & Associates</strong> – Completed internship focused on indirect taxation, GST advisory, and compliance under Customs law.</li>
-      <li><strong>Scales Law Firm</strong> – Drafted litigation documents including plaints, cease & desist notices, and researched cyber/IP laws.</li>
-      <li><strong>Chambers of Adv. Ajinkya Udane, Bombay HC</strong> – Assisted with case strategy, drafting, client intake, and court proceedings.</li>
-      <li><strong>Edge Law Partners</strong> – Conducted legal research on IPC, CrPC, and Evidence Act provisions.</li>
-      <li><strong>The Amikus Qriae</strong> – Wrote briefs and performed in-depth research on Benami laws, Hindu laws, and media censorship cases.</li>
-    </ul>
-  </section>
+    <section>
+      <h2>Internships & Experience</h2>
+      <ul>
+        <li><strong>M. Neerav & Associates</strong> – Internship focused on GST and Customs law.</li>
+        <li><strong>Scales Law Firm</strong> – Drafted legal notices and conducted cyber/IP research.</li>
+        <li><strong>Adv. Ajinkya Udane, Bombay HC</strong> – Assisted in case strategy, drafting and trial preparation.</li>
+        <li><strong>Edge Law Partners</strong> – Researched & Drafted on IPC, CrPC, and Evidence Act.</li>
+        <li><strong>The Amikus Qriae</strong> – Researched on Benami Transactions Act, Hindu law, and Censorship.</li>
+      </ul>
+    </section>
 
-  <section class="publications">
-    <h2>Publications</h2>
-    <ul>
-      <li>“Gender Inclusivity in Sports: Indian Context” – Jus Corpus Law Journal</li>
-      <li>“Malicious Prosecution and False Imprisonment” – IJLRA</li>
-      <li>“The Curious Case of Male Prostitution” – Jus Corpus Law Journal</li>
-      <li>“Juvenile Delinquency: Indian Context” – Legal Lore</li>
-    </ul>
-  </section>
+    <section>
+      <h2>Publications</h2>
+      <ul>
+        <li>“Gender Inclusivity in Sports” – Jus Corpus Law Journal</li>
+        <li>“Malicious Prosecution vs. False Imprisonment” – IJLRA</li>
+        <li>“The Curious Case of Male Prostitution” – Jus Corpus</li>
+        <li>“Juvenile Delinquency in India” – Legal Lore</li>
+      </ul>
+    </section>
 
-  <section class="awards">
-    <h2>Awards & Leadership</h2>
-    <ul>
-      <li>Best Researcher – IFIM Annual Ranking Moot Court Competition</li>
-      <li>Convenor – Centre for Legal Advocacy</li>
-      <li>Runner-Up – IFIM Intra CSI Competition</li>
-      <li>50% Super Scholar Scholarship – Padode Foundation</li>
-    </ul>
-  </section>
+    <section>
+      <h2>Awards & Leadership</h2>
+      <ul>
+        <li>Convenor – Centre for Legal Advocacy, IFIM Law School</li>
+        <li>Best Researcher – IFIM Law School's Annual Ranking Moot Court Competition</li>
+        <li>2nd Best Speaker – IFIM Law School's Annual Ranking Moot Court Competition</li>
+        <li>Runner-Up – IFIM Law School's Intra Crime Scene Investigation Competition</li>
+        <li>Receipient of 50% Scholarship by Padode Foundation, IFIM Law School</li>
+      </ul>
+    </section>
 
- <section class="contact">
-  <h2>Contact</h2>
-  <p>Email: <a href="mailto:chawatheshashank@gmail.com">chawatheshashank@gmail.com</a></p>
-  <p>Phone: +91 9763080680</p>
-  <p>LinkedIn: <a href="https://www.linkedin.com/in/shashank-chawathe-31aab721b" target="_blank">
-    linkedin.com/in/shashank-chawathe</a></p>
-  <a href="Shashank-Chawathe-CV.pdf" class="cv-button" download>Download CV</a>
-</section>
-
+    <section class="contact">
+      <h2>Contact</h2>
+      <p>Email: <a href="mailto:chawatheshashank@gmail.com">chawatheshashank@gmail.com</a></p>
+      <p>Phone: +91 9763080680</p>
+      <p>
+        LinkedIn: 
+        <a href="https://www.linkedin.com/in/shashank-chawathe-31aab721b" target="_blank">
+          linkedin.com/in/shashank-chawathe
+        </a>
+      </p>
+      <a href="Shashank-Chawathe-CV.pdf" class="cv-button" download>📄 Download My CV</a>
+    </section>
+  </div>
 </body>
 </html>
