--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <ul>
         <li>Convenor – Centre for Legal Advocacy, IFIM Law School</li>
         <li>Best Researcher – IFIM Law School's Annual Ranking Moot Court Competition</li>
-        <li>2nd Best Speaker – IFIM Law School's Annual Ranking Moot Court Competition</li>
+        <li>Runner-up Speaker – IFIM Law School's Annual Ranking Moot Court Competition</li>
         <li>Runner-Up – IFIM Law School's Intra Crime Scene Investigation Competition</li>
         <li>Receipient of 50% Scholarship by Padode Foundation, IFIM Law School</li>
       </ul>
