--- a/index.html
+++ b/index.html
@@ -3,73 +3,157 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Shashank Chawathe – Portfolio</title>
-  <link rel="stylesheet" href="style.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
+  <title>Shashank Chawathe | Law Portfolio</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background: #f4f4f4;
+      color: #333;
+    }
+    header {
+      background: #002147;
+      color: white;
+      padding: 20px;
+      text-align: center;
+    }
+    section {
+      padding: 20px;
+      max-width: 900px;
+      margin: auto;
+      background: white;
+      margin-top: 20px;
+      border-radius: 8px;
+    }
+    h2 {
+      color: #002147;
+      border-bottom: 2px solid #ccc;
+      padding-bottom: 5px;
+    }
+    ul {
+      padding-left: 20px;
+    }
+  </style>
 </head>
 <body>
-  <div class="container">
-    <header>
-      <img src="profile.jpg" alt="Shashank Chawathe" class="profile-pic" />
-      <h1>Shashank Chawathe</h1>
-      <p>IV Year BBA LL.B. Student, IFIM Law School | Aspiring Advocate | Criminal, Tax & Family Law Enthusiast</p>
-    </header>
+  <header>
+    <h1>Shashank Chawathe</h1>
+    <p>IV Year BBA LL.B. | IFIM Law School, Bengaluru | Class of 2026</p>
+    <p><a href="mailto:chawatheshashank@gmail.com" style="color: #ccc;">chawatheshashank@gmail.com</a> | <a href="https://github.com/ShashankChawathe/Portfolio" style="color: #ccc;">GitHub Portfolio</a></p>
+  </header>
 
-    <section>
-      <h2>About Me</h2>
-      <p>
-       I am a dedicated Law student with a growing specialization in Criminal Law, Taxation, and Family Law. 
-  My practical experience spans GST Compliance, Civil & Criminal litigation, and Legal Drafting, equipping me with a balanced 
-  skill set that blends analytical reasoning, statutory interpretation, and effective legal communication. 
-  I am committed to delivering well-researched, client-focused legal solutions and contributing meaningfully 
-  to the legal profession.
-      </p>
-    </section>
+  <section>
+    <h2>About Me</h2>
+    <p>I am a dedicated law student with a strong interest in litigation, legal drafting, and research. I have interned with reputed law firms and chambers, working on matters involving indirect taxation, IP law, cybercrime, and criminal law. I enjoy advocacy, competition, and leadership opportunities that sharpen my professional and interpersonal skills.</p>
+  </section>
 
-    <section>
-      <h2>Internships & Experience</h2>
-      <ul>
-        <li><strong>M. Neerav & Associates</strong> – Internship focused on GST and Customs law.</li>
-        <li><strong>Scales Law Firm</strong> – Drafted legal notices and conducted cyber/IP research.</li>
-        <li><strong>Adv. Ajinkya Udane, Bombay HC</strong> – Assisted in case strategy, drafting and trial preparation.</li>
-        <li><strong>Edge Law Partners</strong> – Researched & Drafted on IPC, CrPC, and Evidence Act.</li>
-        <li><strong>The Amikus Qriae</strong> – Researched on Benami Transactions Act, Hindu law, and Censorship.</li>
-      </ul>
-    </section>
+  <section>
+    <h2>Internships</h2>
+    <ul>
+      <li><strong>Chambers of Adv. Sumukh Shastry, Karnataka HC (Apr–May 2025):</strong>
+        <ul>
+          <li>Conducted legal research on civil disputes before the Karnataka High Court.</li>
+          <li>Drafted and proofread petitions, written submissions, notices, and affidavits.</li>
+          <li>Attended court proceedings, prepared case briefs, and assisted in client meetings and internal discussions.</li>
+        </ul>
+      </li>
 
-    <section>
-      <h2>Publications</h2>
-      <ul>
-        <li>“Gender Inclusivity in Sports” – Jus Corpus Law Journal</li>
-        <li>“Malicious Prosecution vs. False Imprisonment” – IJLRA</li>
-        <li>“The Curious Case of Male Prostitution” – Jus Corpus</li>
-        <li>“Juvenile Delinquency in India” – Legal Lore</li>
-      </ul>
-    </section>
+      <li><strong>M. Neerav & Associates (Feb–Mar 2025):</strong>
+        <ul>
+          <li>Drafted SCN replies & appeals for GST-related disputes including ITC refunds.</li>
+          <li>Conducted legal research on GST & Customs Laws.</li>
+          <li>Assisted in building litigation strategy for trial.</li>
+        </ul>
+      </li>
 
-    <section>
-      <h2>Awards & Leadership</h2>
-      <ul>
-        <li>Convenor – Centre for Legal Advocacy, IFIM Law School</li>
-        <li>Best Researcher – IFIM Law School's Annual Ranking Moot Court Competition</li>
-        <li>Runner-up Speaker – IFIM Law School's Annual Ranking Moot Court Competition</li>
-        <li>Runner-Up – IFIM Law School's Intra Crime Scene Investigation Competition</li>
-        <li>Receipient of 50% Scholarship by Padode Foundation, IFIM Law School</li>
-      </ul>
-    </section>
+      <li><strong>Scales Law Firm (Sep–Oct 2024):</strong>
+        <ul>
+          <li>Drafted legal documents including complaints, cease-and-desist, plaints for IT Act-related disputes.</li>
+          <li>Researched on Cybercrime laws and Alternate Dispute Resolution Laws including the Arbitration and Conciliation Act, 1996.</li>
+        </ul>
+      </li>
 
-    <section class="contact">
-      <h2>Contact</h2>
-      <p>Email: <a href="mailto:chawatheshashank@gmail.com">chawatheshashank@gmail.com</a></p>
-      <p>Phone: +91 9763080680</p>
-      <p>
-        LinkedIn: 
-        <a href="https://www.linkedin.com/in/shashank-chawathe-31aab721b" target="_blank">
-          linkedin.com/in/shashank-chawathe
-        </a>
-      </p>
-      <a href="Shashank-Chawathe-CV.pdf" class="cv-button" download>📄 Download My CV</a>
-    </section>
-  </div>
+      <li><strong>Chambers of Adv. Ajinkya Udane, Bombay HC (Apr–May 2024):</strong>
+        <ul>
+          <li>Engaged in case preparation & litigation strategy for property-related disputes as well as criminal cases.</li>
+          <li>Assisted in drafting of written submissions for property-related disputes and criminal cases.</li>
+          <li>Observed Family Court proceedings and criminal courts, drafted proceeding summaries.</li>
+        </ul>
+      </li>
+
+      <li><strong>Chambers of Adv. Harshwardhan Singh, Chhattisgarh HC (Jan–Feb 2024):</strong>
+        <ul>
+          <li>Assisted in litigation strategy for civil, criminal, and family law matters before the Chhattisgarh High Court.</li>
+          <li>Prepared case notes, attended client meetings, and senior counsel briefings.</li>
+          <li>Drafted legal documents including writs, review and contempt petitions, affidavits, and notices; conducted in-depth legal research.</li>
+        </ul>
+      </li>
+    </ul>
+  </section>
+
+  <section>
+    <h2>Publications</h2>
+    <ul>
+      <li>Gender Inclusivity in Sports: Indian Context – <em>Jus Corpus Law Journal</em></li>
+      <li>Malicious Prosecution & False Imprisonment – <em>IJLRA</em></li>
+      <li>The Curious Case of Male Prostitution – <em>Jus Corpus Law Journal</em></li>
+      <li>Juvenile Delinquency: Indian Context – <em>Legal Lore</em></li>
+    </ul>
+  </section>
+
+  <section>
+    <h2>Positions of Responsibility</h2>
+    <ul>
+      <li><strong>Convenor, Centre for Legal Advocacy (2023–Present):</strong> Led national advocacy events, strategic planning, and team coordination.</li>
+      <li><strong>Member, Internship Committee (2022):</strong> Guided peers in securing internships and networking.</li>
+    </ul>
+  </section>
+
+  <section>
+    <h2>Achievements</h2>
+    <ul>
+      <li>Runner-Up – IFIM Intra Mediation-Arbitration Competition, 2025</li>
+      <li>Best Researcher – IFIM Annual Ranking Moot Court, 2024</li>
+      <li>Runner-Up – IFIM Intra Crime Scene Investigation, 2023</li>
+      <li>50% Padode Foundation Scholarship Recipient</li>
+    </ul>
+  </section>
+
+  <section>
+    <h2>Moots & Competitions</h2>
+    <ul>
+      <li>21st & 20th K.K. Luthra Memorial Moot Court, Delhi University (2024–2025)</li>
+      <li>National Trial Advocacy & Labour Law Conciliation Competitions (2023–2024)</li>
+      <li>IFIM Intra Moots, Negotiation, Mediation & Arbitration (2022–2025)</li>
+    </ul>
+  </section>
+
+  <section>
+    <h2>Extra-Curriculars</h2>
+    <ul>
+      <li>Organizer – Concordat 3.0 ADR & IFIM Moot Court Competitions</li>
+      <li>Founder & Blogger – CricBlogs</li>
+      <li>Captain & Runner-Up – IFIM Cricket Tournament</li>
+    </ul>
+  </section>
+
+  <section>
+    <h2>Education</h2>
+    <ul>
+      <li><strong>IFIM Law School, Bengaluru:</strong> BBA LL.B. (IV Year), GPA: 8/10</li>
+      <li><strong>Mithibai College, Mumbai:</strong> Class XII – 90.33% (2021)</li>
+      <li><strong>Holy Family Convent High School:</strong> Class X – 87.60% (2019)</li>
+    </ul>
+  </section>
+
+  <section>
+    <h2>Languages</h2>
+    <ul>
+      <li>English (Professional Proficiency)</li>
+      <li>Hindi & Marathi (Native Proficiency)</li>
+    </ul>
+  </section>
+
 </body>
 </html>
