--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <title>Shashank Chawathe | Law Portfolio</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
+      font-family: "Times New Roman", Times, serif;
+      line-height: 1.6;
       margin: 0;
       padding: 0;
       background: #f4f4f4;
@@ -43,9 +44,36 @@
     <p><a href="mailto:chawatheshashank@gmail.com" style="color: #ccc;">chawatheshashank@gmail.com</a> | <a href="https://github.com/ShashankChawathe/Portfolio" style="color: #ccc;">GitHub Portfolio</a></p>
   </header>
 
+  <!-- Profile Image -->
+  <div style="text-align: center; margin-top: 10px;">
+    <img src="profile.jpg" alt="Shashank Chawathe" style="width: 180px; height: auto; border-radius: 50%; box-shadow: 0 0 10px rgba(0,0,0,0.1);" />
+  </div>
+
+  <!-- CV Button -->
+  <div style="text-align: center; margin: 20px;">
+    <a href="Shashank_Chawathe_CV_.pdf" download style="
+      background-color: #002147;
+      color: white;
+      padding: 12px 24px;
+      text-decoration: none;
+      border-radius: 8px;
+      display: inline-block;
+      font-weight: bold;
+      box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+    ">📄 Download My CV</a>
+  </div>
+
   <section>
     <h2>About Me</h2>
-    <p>I am a dedicated law student with a strong interest in litigation, legal drafting, and research. I have interned with reputed law firms and chambers, working on matters involving indirect taxation, IP law, cybercrime, and criminal law. I enjoy advocacy, competition, and leadership opportunities that sharpen my professional and interpersonal skills.</p>
+    <p>
+      I am a final-year BBA LL.B. student at IFIM Law School, Bengaluru, with a strong academic and professional focus on litigation, legal research, and dispute resolution. Through diverse internships across High Courts and reputed law firms, I have developed hands-on experience in civil, criminal, and commercial litigation, along with a sound understanding of Indirect Taxation, Criminal laws and Family Laws.
+    </p>
+    <p>
+      My work has involved drafting pleadings, conducting in-depth legal research, preparing litigation strategy, and attending court proceedings. I have actively contributed to Law School Competitions, Publications, and Student Committees, honing both my legal acumen and leadership skills.
+    </p>
+    <p>
+      I am driven by a deep interest in the evolving legal landscape and committed to building a practice grounded in integrity, strategic thinking, and impactful advocacy.
+    </p>
   </section>
 
   <section>
@@ -105,8 +133,8 @@
   <section>
     <h2>Positions of Responsibility</h2>
     <ul>
-      <li><strong>Convenor, Centre for Legal Advocacy (2023–Present):</strong> Led national advocacy events, strategic planning, and team coordination.</li>
-      <li><strong>Member, Internship Committee (2022):</strong> Guided peers in securing internships and networking.</li>
+      <li><strong>Convenor, Centre for Legal Advocacy (2023–Present):</strong> Led National Trial Advocacy Competition in collaboration with the Karnataka Institute for Law and Parliamentary Reform (KILPAR), strategic planning, and Team coordination.</li>
+      <li><strong>Member, Internship Committee (2022):</strong> Guided peers in securing Internships and networking.</li>
     </ul>
   </section>
 
@@ -114,9 +142,10 @@
     <h2>Achievements</h2>
     <ul>
       <li>Runner-Up – IFIM Intra Mediation-Arbitration Competition, 2025</li>
-      <li>Best Researcher – IFIM Annual Ranking Moot Court, 2024</li>
+      <li>Semi-Finalist – KLE Law College's 1st National Labour Law Conciliation Competition, 2025</li>
+      <li>Best Researcher – IFIM Annual Ranking Moot Court Competition, 2024</li>
       <li>Runner-Up – IFIM Intra Crime Scene Investigation, 2023</li>
-      <li>50% Padode Foundation Scholarship Recipient</li>
+      <li>50% Padode Foundation Scholarship Recipient, IFIM Law School, Bengaluru</li>
     </ul>
   </section>
 
@@ -124,15 +153,15 @@
     <h2>Moots & Competitions</h2>
     <ul>
       <li>21st & 20th K.K. Luthra Memorial Moot Court, Delhi University (2024–2025)</li>
-      <li>National Trial Advocacy & Labour Law Conciliation Competitions (2023–2024)</li>
-      <li>IFIM Intra Moots, Negotiation, Mediation & Arbitration (2022–2025)</li>
+      <li>National Trial Advocacy & Labour Law Conciliation Competitions (2023–2025)</li>
+      <li>IFIM Intra Moots, Negotiation, Mediation & Arbitration Competitions (2021–2025)</li>
     </ul>
   </section>
 
   <section>
     <h2>Extra-Curriculars</h2>
     <ul>
-      <li>Organizer – Concordat 3.0 ADR & IFIM Moot Court Competitions</li>
+      <li>Organizer – IFIM-KILPAR's National Trial Advocacy Competition, Concordat 3.0 IFIM Law School's ADR Fest & IFIM's National Moot Court Competitions</li>
       <li>Founder & Blogger – CricBlogs</li>
       <li>Captain & Runner-Up – IFIM Cricket Tournament</li>
     </ul>
