--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <header>
     <h1>Shashank Chawathe</h1>
     <p>IV Year BBA LL.B. | IFIM Law School, Bengaluru | Class of 2026</p>
-    <p><a href="mailto:chawatheshashank@gmail.com" style="color: #ccc;">chawatheshashank@gmail.com</a> | <a href="https://github.com/ShashankChawathe/Portfolio" style="color: #ccc;">GitHub Portfolio</a></p>
+    <p><a href="mailto:chawatheshashank@gmail.com" style="color: #ccc;">chawatheshashank@gmail.com</a> | <a href="Contact No.: 9763080680" style="color: #ccc;">Contact No. 9763080680</a></p>
   </header>
 
   <!-- Profile Image -->
