--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <body>
   <header>
     <h1>Shashank Chawathe</h1>
-    <p>IV Year BBA LL.B. | IFIM Law School, Bengaluru | Class of 2026</p>
+    <p>V Year BBA LL.B. | IFIM Law School, Bengaluru | Class of 2026</p>
     <p><a href="mailto:chawatheshashank@gmail.com" style="color: #ccc;">chawatheshashank@gmail.com</a> | <a href="Contact No.: 9763080680" style="color: #ccc;">Contact No. 9763080680</a></p>
   </header>
 
