--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
   <!-- CV Button -->
   <div style="text-align: center; margin: 20px;">
-    <a href="Shashank_Chawathe_CV_.pdf" download style="
+    <a href="Shashank_Chawathe_CV.pdf" download style="
       background-color: #002147;
       color: white;
       padding: 12px 24px;
