--- a/index.html
+++ b/index.html
@@ -79,6 +79,25 @@
   <section>
     <h2>Internships</h2>
     <ul>
+      <li><strong>Adv. Anushka Roy (Aug-Sept 2025):</strong>
+        <ul>
+          <li>Drafted and reviewed legal documents including Writ Petitions, Review Petitions, Contempt Petitions, Applications, Affidavits, Notices, and Letters.</li>
+          <li>Conducted detailed legal research on various aspects of Civil and Criminal Law.</li>
+          <li>Prepared case notes, document compilations, and assisted in client meetings and Senior Counsel briefings.</li>
+          <li>Attended proceedings before the Hon’ble High Court of Karnataka and assisted in litigation strategy.</li>
+        </ul>
+      </li>
+      
+    <ul>
+      <li><strong>M. Neerav & Associates (June-July 2025):</strong>
+        <ul>
+          <li>Drafted SCN replies and appeals in GST and Customs-related disputes, including ITC refunds, E-way Bill issues, and double taxation matters.</li>
+          <li>Conducted in-depth legal research on GST, Customs, and DGFT regulations; contributed to the development of the Firm’s Legal Updates Newsletter.</li>
+          <li>Assisted in formulating litigation strategies and participated in client meetings for dispute resolution.</li>
+        </ul>
+      </li>
+      
+    <ul>
       <li><strong>Chambers of Adv. Sumukh Shastry, Karnataka HC (Apr–May 2025):</strong>
         <ul>
           <li>Conducted legal research on civil disputes before the Karnataka High Court.</li>
@@ -186,3 +205,4 @@
 
 </body>
 </html>
+
