--- a/index.html
+++ b/index.html
@@ -38,172 +38,171 @@
   </style>
 </head>
 <body>
-  <header>
-    <h1>Shashank Chawathe</h1>
-    <p>V Year BBA LL.B. | IFIM Law School, Bengaluru | Class of 2026</p>
-    <p><a href="mailto:chawatheshashank@gmail.com" style="color: #ccc;">chawatheshashank@gmail.com</a> | <a href="Contact No.: 9763080680" style="color: #ccc;">Contact No. 9763080680</a></p>
-  </header>
 
-  <!-- Profile Image -->
-  <div style="text-align: center; margin-top: 10px;">
-    <img src="profile.jpg" alt="Shashank Chawathe" style="width: 180px; height: auto; border-radius: 50%; box-shadow: 0 0 10px rgba(0,0,0,0.1);" />
-  </div>
+<header>
+  <h1>Shashank Chawathe</h1>
+  <p>V Year BBA LL.B. | IFIM Law School, Bengaluru | Class of 2026</p>
+  <p>
+    <a href="mailto:chawatheshashank@gmail.com" style="color: #ccc;">chawatheshashank@gmail.com</a> |
+    <span style="color: #ccc;">Contact No. 9763080680</span>
+  </p>
+</header>
 
-  <!-- CV Button -->
-  <div style="text-align: center; margin: 20px;">
-    <a href="Shashank_Chawathe_CV.pdf" download style="
-      background-color: #002147;
-      color: white;
-      padding: 12px 24px;
-      text-decoration: none;
-      border-radius: 8px;
-      display: inline-block;
-      font-weight: bold;
-      box-shadow: 0 4px 6px rgba(0,0,0,0.1);
-    ">📄 Download My CV</a>
-  </div>
+<div style="text-align: center; margin-top: 10px;">
+  <img src="profile.jpg" alt="Shashank Chawathe" style="width: 180px; border-radius: 50%; box-shadow: 0 0 10px rgba(0,0,0,0.1);" />
+</div>
 
-  <section>
-    <h2>About Me</h2>
-    <p>
-      I am a final-year BBA LL.B. student at IFIM Law School, Bengaluru, with a strong academic and professional focus on litigation, legal research, and dispute resolution. Through diverse internships across High Courts and reputed law firms, I have developed hands-on experience in civil, criminal, and commercial litigation, along with a sound understanding of Indirect Taxation, Criminal laws and Family Laws.
-    </p>
-    <p>
-      My work has involved drafting pleadings, conducting in-depth legal research, preparing litigation strategy, and attending court proceedings. I have actively contributed to Law School Competitions, Publications, and Student Committees, honing both my legal acumen and leadership skills.
-    </p>
-    <p>
-      I am driven by a deep interest in the evolving legal landscape and committed to building a practice grounded in integrity, strategic thinking, and impactful advocacy.
-    </p>
-  </section>
+<div style="text-align: center; margin: 20px;">
+  <a href="Shashank_Chawathe_CV.pdf" download style="
+    background-color: #002147;
+    color: white;
+    padding: 12px 24px;
+    text-decoration: none;
+    border-radius: 8px;
+    font-weight: bold;
+  ">📄 Download My CV</a>
+</div>
 
-  <section>
-    <h2>Internships</h2>
-    <ul>
-      <li><strong>Adv. Anushka Roy (Aug-Sept 2025):</strong>
-        <ul>
-          <li>Drafted and reviewed legal documents including Writ Petitions, Review Petitions, Contempt Petitions, Applications, Affidavits, Notices, and Letters.</li>
-          <li>Conducted detailed legal research on various aspects of Civil and Criminal Law.</li>
-          <li>Prepared case notes, document compilations, and assisted in client meetings and Senior Counsel briefings.</li>
-          <li>Attended proceedings before the Hon’ble High Court of Karnataka and assisted in litigation strategy.</li>
-        </ul>
-      </li>
+<section>
+  <h2>Internships</h2>
 
-    <ul>
-      <li><strong>M. Neerav & Associates (June-July 2025):</strong>
-        <ul>
-          <li>Drafted SCN replies and appeals in GST and Customs-related disputes, including ITC refunds, E-way Bill issues, and double taxation matters.</li>
-          <li>Conducted in-depth legal research on GST, Customs, and DGFT regulations; contributed to the development of the Firm’s Legal Updates Newsletter.</li>
-          <li>Assisted in formulating litigation strategies and participated in client meetings for dispute resolution.</li>
-        </ul>
-      </li>
-      
-    <ul>
-      <li><strong>Chambers of Adv. Sumukh Shastry, Karnataka HC (Apr–May 2025):</strong>
-        <ul>
-          <li>Conducted legal research on civil disputes before the Karnataka High Court.</li>
-          <li>Drafted and proofread petitions, written submissions, notices, and affidavits.</li>
-          <li>Attended court proceedings, prepared case briefs, and assisted in client meetings and internal discussions.</li>
-        </ul>
-      </li>
+  <ul>
+    <li><strong>Adv. Swapnil Anand – Jharkhand High Court | Sept – Oct 2025</strong>
+      <ul>
+        <li>Conducted legal research on active criminal and civil matters.</li>
+        <li>Prepared briefs and drafted petitions involving criminal, matrimonial, and property disputes.</li>
+        <li>Attended courtroom proceedings at the Jharkhand High Court, Ranchi.</li>
+        <li>Assisted the Additional Solicitor General of India in case briefing and research.</li>
+      </ul>
+    </li>
 
-      <li><strong>M. Neerav & Associates (Feb–Mar 2025):</strong>
-        <ul>
-          <li>Drafted SCN replies & appeals for GST-related disputes including ITC refunds.</li>
-          <li>Conducted legal research on GST & Customs Laws.</li>
-          <li>Assisted in building litigation strategy for trial.</li>
-        </ul>
-      </li>
+    <li><strong>Adv. Anushka Roy – High Court of Karnataka | Aug – Sept 2025</strong>
+      <ul>
+        <li>Drafted and reviewed Writ, Review, Contempt Petitions, Applications, Affidavits & Legal Notices.</li>
+        <li>Conducted research on Civil & Criminal Laws.</li>
+        <li>Prepared case notes and assisted in client conferences & senior counsel briefings.</li>
+        <li>Attended court proceedings and assisted litigation strategy.</li>
+      </ul>
+    </li>
 
-      <li><strong>Scales Law Firm (Sep–Oct 2024):</strong>
-        <ul>
-          <li>Drafted legal documents including complaints, cease-and-desist, plaints for IT Act-related disputes.</li>
-          <li>Researched on Cybercrime laws and Alternate Dispute Resolution Laws including the Arbitration and Conciliation Act, 1996.</li>
-        </ul>
-      </li>
+    <li><strong>M. Neerav & Associates | June – July 2025</strong>
+      <ul>
+        <li>Drafted SCN replies & appeals in GST and Customs disputes.</li>
+        <li>Researched GST, Customs & DGFT Laws.</li>
+        <li>Contributed to Firm’s Legal Updates Newsletter.</li>
+        <li>Assisted in litigation strategy & client meetings.</li>
+      </ul>
+    </li>
 
-      <li><strong>Chambers of Adv. Ajinkya Udane, Bombay HC (Apr–May 2024):</strong>
-        <ul>
-          <li>Engaged in case preparation & litigation strategy for property-related disputes as well as criminal cases.</li>
-          <li>Assisted in drafting of written submissions for property-related disputes and criminal cases.</li>
-          <li>Observed Family Court proceedings and criminal courts, drafted proceeding summaries.</li>
-        </ul>
-      </li>
+    <li><strong>Adv. Sumukh Shastry – High Court of Karnataka | Apr – May 2025</strong>
+      <ul>
+        <li>Conducted research on matrimonial, property & contract disputes.</li>
+        <li>Drafted petitions, notices, affidavits & written submissions.</li>
+        <li>Prepared case briefs & assisted client meetings.</li>
+      </ul>
+    </li>
 
-      <li><strong>Chambers of Adv. Harshwardhan Singh, Chhattisgarh HC (Jan–Feb 2024):</strong>
-        <ul>
-          <li>Assisted in litigation strategy for civil, criminal, and family law matters before the Chhattisgarh High Court.</li>
-          <li>Prepared case notes, attended client meetings, and senior counsel briefings.</li>
-          <li>Drafted legal documents including writs, review and contempt petitions, affidavits, and notices; conducted in-depth legal research.</li>
-        </ul>
-      </li>
-    </ul>
-  </section>
+    <li><strong>Chambers of Adv. Ajinkya Udane – Bombay High Court | Apr – May 2024</strong>
+      <ul>
+        <li>Assisted in litigation strategy for property & criminal matters.</li>
+        <li>Drafted written submissions.</li>
+        <li>Observed Family & Criminal Court proceedings.</li>
+      </ul>
+    </li>
 
-  <section>
-    <h2>Publications</h2>
-    <ul>
-      <li>Gender Inclusivity in Sports: Indian Context – <em>Jus Corpus Law Journal</em></li>
-      <li>Malicious Prosecution & False Imprisonment – <em>IJLRA</em></li>
-      <li>The Curious Case of Male Prostitution – <em>Jus Corpus Law Journal</em></li>
-      <li>Juvenile Delinquency: Indian Context – <em>Legal Lore</em></li>
-    </ul>
-  </section>
+    <li><strong>Adv. Harshwardhan Singh – Chhattisgarh High Court | Jan – Feb 2024</strong>
+      <ul>
+        <li>Assisted in civil, criminal & family matters.</li>
+        <li>Drafted writs, review & contempt petitions.</li>
+        <li>Conducted legal research & assisted senior counsel briefings.</li>
+      </ul>
+    </li>
+  </ul>
+</section>
 
-  <section>
-    <h2>Positions of Responsibility</h2>
-    <ul>
-      <li><strong>Convenor, Centre for Legal Advocacy (2023–Present):</strong> Led National Trial Advocacy Competition in collaboration with the Karnataka Institute for Law and Parliamentary Reform (KILPAR), strategic planning, and Team coordination.</li>
-      <li><strong>Member, Internship Committee (2022):</strong> Guided peers in securing Internships and networking.</li>
-    </ul>
-  </section>
+<section>
+  <h2>Publications</h2>
+  <ul>
+    <li>Gender Inclusivity in Sports: Indian Context – Jus Corpus Law Journal</li>
+    <li>Malicious Prosecution & False Imprisonment – IJLRA</li>
+    <li>The Curious Case of Male Prostitution – Jus Corpus Law Journal</li>
+  </ul>
+</section>
 
-  <section>
-    <h2>Achievements</h2>
-    <ul>
-      <li>Runner-Up – IFIM Intra Mediation-Arbitration Competition, 2025</li>
-      <li>Semi-Finalist – KLE Law College's 1st National Labour Law Conciliation Competition, 2025</li>
-      <li>Best Researcher – IFIM Annual Ranking Moot Court Competition, 2024</li>
-      <li>Runner-Up – IFIM Intra Crime Scene Investigation, 2023</li>
-      <li>50% Padode Foundation Scholarship Recipient, IFIM Law School, Bengaluru</li>
-    </ul>
-  </section>
+<section>
+  <h2>Positions of Responsibility</h2>
+  <ul>
+    <li><strong>Convenor – Centre for Legal Advocacy | Nov 2023 – Nov 2025</strong>
+      <ul>
+        <li>Designed long & short-term strategic plans.</li>
+        <li>Organized Trial Advocacy & Crime Scene Investigation Competitions.</li>
+        <li>Led recruitment, training & management of volunteers.</li>
+      </ul>
+    </li>
 
-  <section>
-    <h2>Moots & Competitions</h2>
-    <ul>
-      <li>21st & 20th K.K. Luthra Memorial Moot Court, Delhi University (2024–2025)</li>
-      <li>National Trial Advocacy & Labour Law Conciliation Competitions (2023–2025)</li>
-      <li>IFIM Intra Moots, Negotiation, Mediation & Arbitration Competitions (2021–2025)</li>
-    </ul>
-  </section>
+    <li><strong>Convenor – Moot Court Committee | Nov 2025 – Present</strong>
+      <ul>
+        <li>Restructured committee & conducted intra competitions.</li>
+        <li>Drafted moot propositions & handled budgeting.</li>
+      </ul>
+    </li>
 
-  <section>
-    <h2>Extra-Curriculars</h2>
-    <ul>
-      <li>Organizer – IFIM-KILPAR's National Trial Advocacy Competition, Concordat 3.0 IFIM Law School's ADR Fest & IFIM's National Moot Court Competitions</li>
-      <li>Founder & Blogger – CricBlogs</li>
-      <li>Captain & Runner-Up – IFIM Cricket Tournament</li>
-    </ul>
-  </section>
+    <li><strong>Member – Admissions Committee | Jan 2023 – Apr 2023</strong></li>
+    <li><strong>Member – Internship Committee | June 2022 – Dec 2022</strong></li>
+  </ul>
+</section>
 
-  <section>
-    <h2>Education</h2>
-    <ul>
-      <li><strong>IFIM Law School, Bengaluru:</strong> BBA LL.B. (IV Year), GPA: 8/10</li>
-      <li><strong>Mithibai College, Mumbai:</strong> Class XII – 90.33% (2021)</li>
-      <li><strong>Holy Family Convent High School:</strong> Class X – 87.60% (2019)</li>
-    </ul>
-  </section>
+<section>
+  <h2>Achievements</h2>
+  <ul>
+    <li>Runner-Up – IFIM Intra Mediation-Arbitration Competition, 2025</li>
+    <li>Semi-Finalist – KLE 1st National Conciliation Competition, 2025</li>
+    <li>Runner-Up – IFIM Intra Mediation-Arbitration Competition, 2024</li>
+    <li>Best Researcher – IFIM Annual Ranking Moot, 2024</li>
+    <li>Runner-Up – IFIM Intra Crime Scene Investigation, 2023</li>
+    <li>50% Scholarship – Padode Foundation</li>
+  </ul>
+</section>
 
-  <section>
-    <h2>Languages</h2>
-    <ul>
-      <li>English (Professional Proficiency)</li>
-      <li>Hindi & Marathi (Native Proficiency)</li>
-    </ul>
-  </section>
+<section>
+  <h2>Moots & Co-Curricular Activities</h2>
+  <ul>
+    <li>21st & 20th K.K. Luthra Memorial Moot, Delhi University</li>
+    <li>1st National Trial Advocacy – Symbiosis Law School, Hyderabad</li>
+    <li>IFIM Annual Ranking Moot Court</li>
+    <li>IFIM Intra Debate – British Parliamentary</li>
+    <li>Negotiation & Mediation Competitions</li>
+  </ul>
+</section>
+
+<section>
+  <h2>Extra-Curricular Activities</h2>
+  <ul>
+    <li>Founder & Curator – Précis</li>
+    <li>Resource Person – Om Galaxy Limited</li>
+    <li>Organizing Team – Concordat 3.0 ADR Competition</li>
+    <li>Collaborator – Lawful Talks</li>
+    <li>Founder – CricBlogs</li>
+    <li>Runner-Up – IFIM Cricket Tournament (Captain)</li>
+  </ul>
+</section>
+
+<section>
+  <h2>Education</h2>
+  <ul>
+    <li><strong>IFIM Law School:</strong> BBA LL.B., GPA: 8/10</li>
+    <li><strong>Mithibai College:</strong> Class XII – 90.33%</li>
+    <li><strong>Holy Family School:</strong> Class X – 87.60%</li>
+  </ul>
+</section>
+
+<section>
+  <h2>Languages</h2>
+  <ul>
+    <li>English – Professional</li>
+    <li>Hindi & Marathi – Native</li>
+  </ul>
+</section>
 
 </body>
 </html>
-
-
