--- a/index.html
+++ b/index.html
@@ -39,170 +39,205 @@
 </head>
 <body>
 
-<header>
-  <h1>Shashank Chawathe</h1>
-  <p>V Year BBA LL.B. | IFIM Law School, Bengaluru | Class of 2026</p>
-  <p>
-    <a href="mailto:chawatheshashank@gmail.com" style="color: #ccc;">chawatheshashank@gmail.com</a> |
-    <span style="color: #ccc;">Contact No. 9763080680</span>
-  </p>
-</header>
+  <header>
+    <h1>Shashank Chawathe</h1>
+    <p>Final Year BBA LL.B. | IFIM Law School, Bengaluru</p>
+    <p>
+      <a href="mailto:chawatheshashank@gmail.com" style="color: #ccc;">chawatheshashank@gmail.com</a> |
+      Contact: 9763080680
+    </p>
+  </header>
 
-<div style="text-align: center; margin-top: 10px;">
-  <img src="profile.jpg" alt="Shashank Chawathe" style="width: 180px; border-radius: 50%; box-shadow: 0 0 10px rgba(0,0,0,0.1);" />
-</div>
+  <!-- Profile Image -->
+  <div style="text-align: center; margin-top: 10px;">
+    <img src="profile.jpg" alt="Shashank Chawathe" style="width: 180px; height: auto; border-radius: 50%; box-shadow: 0 0 10px rgba(0,0,0,0.1);" />
+  </div>
 
-<div style="text-align: center; margin: 20px;">
-  <a href="Shashank_Chawathe_CV.pdf" download style="
-    background-color: #002147;
-    color: white;
-    padding: 12px 24px;
-    text-decoration: none;
-    border-radius: 8px;
-    font-weight: bold;
-  ">📄 Download My CV</a>
-</div>
+  <!-- CV Button -->
+  <div style="text-align: center; margin: 20px;">
+    <a href="Shashank_Chawathe_CV.pdf" download style="
+      background-color: #002147;
+      color: white;
+      padding: 12px 24px;
+      text-decoration: none;
+      border-radius: 8px;
+      display: inline-block;
+      font-weight: bold;
+      box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+    ">📄 Download My CV</a>
+  </div>
 
-<section>
-  <h2>Internships</h2>
+  <!-- INTERNSHIPS -->
+  <section>
+    <h2>Internships</h2>
+    <ul>
+      <li>
+        <strong>Adv. Swapnil Anand, Jharkhand High Court (Sept–Oct 2025)</strong>
+        <ul>
+          <li>Conducted legal research on active criminal and civil cases.</li>
+          <li>Prepared briefs and drafted petitions involving criminal, matrimonial, and property disputes.</li>
+          <li>Attended courtroom proceedings at the Jharkhand High Court, Ranchi.</li>
+          <li>Assisted the Additional Solicitor General of India in case briefs and research.</li>
+        </ul>
+      </li>
 
-  <ul>
-    <li><strong>Adv. Swapnil Anand – Jharkhand High Court | Sept – Oct 2025</strong>
-      <ul>
-        <li>Conducted legal research on active criminal and civil matters.</li>
-        <li>Prepared briefs and drafted petitions involving criminal, matrimonial, and property disputes.</li>
-        <li>Attended courtroom proceedings at the Jharkhand High Court, Ranchi.</li>
-        <li>Assisted the Additional Solicitor General of India in case briefing and research.</li>
-      </ul>
-    </li>
+      <li>
+        <strong>Adv. Anushka Roy, Karnataka High Court (Aug–Sept 2025)</strong>
+        <ul>
+          <li>Drafted and reviewed writs, review petitions, contempt petitions, applications, affidavits, and legal notices.</li>
+          <li>Conducted in-depth research on civil and criminal law.</li>
+          <li>Prepared detailed case notes and assisted during client conferences and senior counsel briefings.</li>
+          <li>Attended proceedings before the Hon’ble High Court of Karnataka.</li>
+        </ul>
+      </li>
 
-    <li><strong>Adv. Anushka Roy – High Court of Karnataka | Aug – Sept 2025</strong>
-      <ul>
-        <li>Drafted and reviewed Writ, Review, Contempt Petitions, Applications, Affidavits & Legal Notices.</li>
-        <li>Conducted research on Civil & Criminal Laws.</li>
-        <li>Prepared case notes and assisted in client conferences & senior counsel briefings.</li>
-        <li>Attended court proceedings and assisted litigation strategy.</li>
-      </ul>
-    </li>
+      <li>
+        <strong>M. Neerav & Associates (June–July 2025)</strong>
+        <ul>
+          <li>Drafted SCN replies and appeals in GST and Customs disputes.</li>
+          <li>Researched GST, Customs, and DGFT regulations.</li>
+          <li>Contributed to the firm’s Legal Updates Newsletter.</li>
+          <li>Assisted in formulating litigation strategies and client meetings.</li>
+        </ul>
+      </li>
 
-    <li><strong>M. Neerav & Associates | June – July 2025</strong>
-      <ul>
-        <li>Drafted SCN replies & appeals in GST and Customs disputes.</li>
-        <li>Researched GST, Customs & DGFT Laws.</li>
-        <li>Contributed to Firm’s Legal Updates Newsletter.</li>
-        <li>Assisted in litigation strategy & client meetings.</li>
-      </ul>
-    </li>
+      <li>
+        <strong>Adv. Sumukh Shastry, Karnataka High Court (Apr–May 2025)</strong>
+        <ul>
+          <li>Researched matrimonial, property, and contract disputes.</li>
+          <li>Drafted petitions, submissions, notices, and affidavits.</li>
+          <li>Prepared case briefs and assisted in client meetings.</li>
+        </ul>
+      </li>
 
-    <li><strong>Adv. Sumukh Shastry – High Court of Karnataka | Apr – May 2025</strong>
-      <ul>
-        <li>Conducted research on matrimonial, property & contract disputes.</li>
-        <li>Drafted petitions, notices, affidavits & written submissions.</li>
-        <li>Prepared case briefs & assisted client meetings.</li>
-      </ul>
-    </li>
+      <li>
+        <strong>Chambers of Adv. Ajinkya Udane, Bombay High Court (Apr–May 2024)</strong>
+        <ul>
+          <li>Assisted in litigation strategy for property and criminal matters.</li>
+          <li>Drafted written submissions.</li>
+          <li>Observed family and criminal court proceedings.</li>
+        </ul>
+      </li>
 
-    <li><strong>Chambers of Adv. Ajinkya Udane – Bombay High Court | Apr – May 2024</strong>
-      <ul>
-        <li>Assisted in litigation strategy for property & criminal matters.</li>
-        <li>Drafted written submissions.</li>
-        <li>Observed Family & Criminal Court proceedings.</li>
-      </ul>
-    </li>
+      <li>
+        <strong>Adv. Harshwardhan Singh, Chhattisgarh High Court (Jan–Feb 2024)</strong>
+        <ul>
+          <li>Assisted in civil, criminal, and family law matters.</li>
+          <li>Prepared case notes and assisted in senior counsel briefings.</li>
+          <li>Drafted writs, review, contempt petitions, affidavits, and notices.</li>
+        </ul>
+      </li>
+    </ul>
+  </section>
 
-    <li><strong>Adv. Harshwardhan Singh – Chhattisgarh High Court | Jan – Feb 2024</strong>
-      <ul>
-        <li>Assisted in civil, criminal & family matters.</li>
-        <li>Drafted writs, review & contempt petitions.</li>
-        <li>Conducted legal research & assisted senior counsel briefings.</li>
-      </ul>
-    </li>
-  </ul>
-</section>
+  <!-- PUBLICATIONS -->
+  <section>
+    <h2>Publications</h2>
+    <ul>
+      <li>Gender Inclusivity in Sports: Indian Context – Jus Corpus Law Journal (ISSN 2582-7820)</li>
+      <li>Malicious Prosecution and False Imprisonment – International Journal for Legal Research and Analysis (ISSN 2582-6433)</li>
+      <li>The Curious Case of Male Prostitution – Jus Corpus Law Journal (ISSN 2582-7820)</li>
+    </ul>
+  </section>
 
-<section>
-  <h2>Publications</h2>
-  <ul>
-    <li>Gender Inclusivity in Sports: Indian Context – Jus Corpus Law Journal</li>
-    <li>Malicious Prosecution & False Imprisonment – IJLRA</li>
-    <li>The Curious Case of Male Prostitution – Jus Corpus Law Journal</li>
-  </ul>
-</section>
+  <!-- POSITIONS OF RESPONSIBILITY -->
+  <section>
+    <h2>Positions of Responsibility</h2>
+    <ul>
+      <li>
+        <strong>Convenor, Centre for Legal Advocacy (Nov 2023–Nov 2025)</strong>
+        <ul>
+          <li>Planned strategic goals and objectives.</li>
+          <li>Organized trial advocacy and crime scene investigation competitions.</li>
+          <li>Managed volunteers and committee members.</li>
+        </ul>
+      </li>
 
-<section>
-  <h2>Positions of Responsibility</h2>
-  <ul>
-    <li><strong>Convenor – Centre for Legal Advocacy | Nov 2023 – Nov 2025</strong>
-      <ul>
-        <li>Designed long & short-term strategic plans.</li>
-        <li>Organized Trial Advocacy & Crime Scene Investigation Competitions.</li>
-        <li>Led recruitment, training & management of volunteers.</li>
-      </ul>
-    </li>
+      <li>
+        <strong>Convenor, Moot Court Committee (Nov 2025–Present)</strong>
+        <ul>
+          <li>Restructured committee and conducted intra competitions.</li>
+          <li>Handled propositions, budgeting, and logistics.</li>
+        </ul>
+      </li>
 
-    <li><strong>Convenor – Moot Court Committee | Nov 2025 – Present</strong>
-      <ul>
-        <li>Restructured committee & conducted intra competitions.</li>
-        <li>Drafted moot propositions & handled budgeting.</li>
-      </ul>
-    </li>
+      <li>
+        <strong>Member, Admissions Committee (Jan 2023–Apr 2023)</strong>
+        <ul>
+          <li>Assisted students during admissions and onboarding.</li>
+        </ul>
+      </li>
 
-    <li><strong>Member – Admissions Committee | Jan 2023 – Apr 2023</strong></li>
-    <li><strong>Member – Internship Committee | June 2022 – Dec 2022</strong></li>
-  </ul>
-</section>
+      <li>
+        <strong>Member, Internship Committee (June 2022–Dec 2022)</strong>
+        <ul>
+          <li>Researched internship opportunities.</li>
+          <li>Coordinated between students and employers.</li>
+        </ul>
+      </li>
+    </ul>
+  </section>
 
-<section>
-  <h2>Achievements</h2>
-  <ul>
-    <li>Runner-Up – IFIM Intra Mediation-Arbitration Competition, 2025</li>
-    <li>Semi-Finalist – KLE 1st National Conciliation Competition, 2025</li>
-    <li>Runner-Up – IFIM Intra Mediation-Arbitration Competition, 2024</li>
-    <li>Best Researcher – IFIM Annual Ranking Moot, 2024</li>
-    <li>Runner-Up – IFIM Intra Crime Scene Investigation, 2023</li>
-    <li>50% Scholarship – Padode Foundation</li>
-  </ul>
-</section>
+  <!-- ACHIEVEMENTS -->
+  <section>
+    <h2>Achievements</h2>
+    <ul>
+      <li>Runner-Up – IFIM Intra Mediation-Arbitration Competition, 2025</li>
+      <li>Semi-Finalist – KLE Law College 1st National Conciliation Competition, 2025</li>
+      <li>Runner-Up – IFIM Intra Mediation-Arbitration Competition, 2024</li>
+      <li>Best Researcher – IFIM Annual Ranking Moot Court Competition, 2024</li>
+      <li>Runner-Up – IFIM Intra Crime Scene Investigation Competition, 2023</li>
+      <li>50% Scholarship Recipient – Padode Foundation, IFIM Law School</li>
+    </ul>
+  </section>
 
-<section>
-  <h2>Moots & Co-Curricular Activities</h2>
-  <ul>
-    <li>21st & 20th K.K. Luthra Memorial Moot, Delhi University</li>
-    <li>1st National Trial Advocacy – Symbiosis Law School, Hyderabad</li>
-    <li>IFIM Annual Ranking Moot Court</li>
-    <li>IFIM Intra Debate – British Parliamentary</li>
-    <li>Negotiation & Mediation Competitions</li>
-  </ul>
-</section>
+  <!-- MOOTS & CO-CURRICULAR -->
+  <section>
+    <h2>Moots & Co-Curricular Activities</h2>
+    <ul>
+      <li>21st K.K. Luthra Memorial Moot Court Competition, 2025 – University of Delhi</li>
+      <li>1st National Trial Advocacy Competition, 2024 – Symbiosis Law School, Hyderabad</li>
+      <li>20th K.K. Luthra Memorial Moot Court, 2024 – University of Delhi</li>
+      <li>IFIM Annual Intra Debate (British Parliamentary), 2023</li>
+      <li>Inter-College Negotiation & Mediation Competitions, 2022–2023</li>
+    </ul>
+  </section>
 
-<section>
-  <h2>Extra-Curricular Activities</h2>
-  <ul>
-    <li>Founder & Curator – Précis</li>
-    <li>Resource Person – Om Galaxy Limited</li>
-    <li>Organizing Team – Concordat 3.0 ADR Competition</li>
-    <li>Collaborator – Lawful Talks</li>
-    <li>Founder – CricBlogs</li>
-    <li>Runner-Up – IFIM Cricket Tournament (Captain)</li>
-  </ul>
-</section>
+  <!-- EXTRA CURRICULAR -->
+  <section>
+    <h2>Extra-Curricular Activities</h2>
+    <ul>
+      <li>Founder & Curator – Précis (Legal Digital Case Library)</li>
+      <li>Resource Person – Motivational & Team-Building Session, Om Galaxy Limited</li>
+      <li>Organizing Team – Concordat 3.0 National ADR Competition, Dec 2023</li>
+      <li>Collaborator – Lawful Talks</li>
+      <li>Organizer – Crime Scene Investigation Competition, Aug 2023</li>
+      <li>Founder & Content Creator – CricBlogs</li>
+      <li>Runner-Up – IFIM Cricket Tournament (Captain)</li>
+      <li>Participant – Karnataka Youth Policy Consultancy Conference, 2022</li>
+      <li>Course – Speaking & Persuasion, University of Michigan, 2021</li>
+      <li>Best Cadet – Aryans Commando Training Camp, Pune, 2019</li>
+    </ul>
+  </section>
 
-<section>
-  <h2>Education</h2>
-  <ul>
-    <li><strong>IFIM Law School:</strong> BBA LL.B., GPA: 8/10</li>
-    <li><strong>Mithibai College:</strong> Class XII – 90.33%</li>
-    <li><strong>Holy Family School:</strong> Class X – 87.60%</li>
-  </ul>
-</section>
+  <!-- EDUCATION -->
+  <section>
+    <h2>Education</h2>
+    <ul>
+      <li><strong>IFIM Law School, Bengaluru:</strong> BBA LL.B., GPA (VIII Semester): 8/10</li>
+      <li><strong>Mithibai College, Mumbai:</strong> Class XII (2021): 90.33%</li>
+      <li><strong>Holy Family Convent High School, Mumbai:</strong> Class X (2019): 87.60%</li>
+    </ul>
+  </section>
 
-<section>
-  <h2>Languages</h2>
-  <ul>
-    <li>English – Professional</li>
-    <li>Hindi & Marathi – Native</li>
-  </ul>
-</section>
+  <!-- LANGUAGES -->
+  <section>
+    <h2>Languages</h2>
+    <ul>
+      <li>English – Professional</li>
+      <li>Hindi & Marathi – Native</li>
+    </ul>
+  </section>
 
 </body>
 </html>
